# league-match-history-discord

./: LICENSE  README.md  main.py  pyproject.toml
cogs/: league.py
